Name:          zeroth
Version:       2012.7.10.1
License:       BSD3
License-file:  LICENSE
Maintainer:    Robin Green <greenrd@greenrd.org>
Build-type:    Custom
Copyright:     2005-2008 Lemmih <lemmih@gmail.com>, 2009 Robin Green <greenrd@greenrd.org>
Category:      Language
Synopsis:      ZeroTH - remove unnecessary TH dependencies
Description:   TemplateHaskell is fairly useful for generating new
               Haskell code. This, however, can incur a dependency on
               TH on subsequent uses where none theoretically should exist.
               ZeroTH solves this by scanning a file for top-level TH
               declarations, evaluates them, removes TH imports, and outputs
               the resulting code.
Bug-reports:   mailto:greenrd@greenrd.org
Stability:     experimental
Tested-with:   GHC == 6.10.3
Extra-tmp-files: ppsrc/Language/Haskell/TH/ZeroTH/GetOpt.hs
Extra-source-files: Language/Haskell/TH/ZeroTH/GetOpt.hs
Cabal-version: >= 1.6

Source-repository head
    Type:      darcs
    Location:  http://patch-tag.com/publicrepos/zerothDarcs2

Library
    build-depends:   base               >= 4.0    && < 5.0, 
                     directory,
                     process,
                     syb                >= 0.3.6  && < 0.4,
                     transformers       >= 0.3.0  && < 0.4,
                     filepath,
                     cpphs              >= 1.13   && < 1.15,
                     haskell-src-exts   >= 1.13   && < 1.15,
                     transformers       >= 0.2    && < 0.4,
                     template-haskell   >= 2.7    && < 3.0,
                     derive             >= 2.5    && < 2.7,
                     uniplate           >= 1.6    && < 1.7,
                     Cabal              >= 1.12   && < 1.16
    Exposed-modules: Language.Haskell.TH.ZeroTH.Config,
                     Language.Haskell.TH.ZeroTH.GetOpt,
                     Language.Haskell.TH.ZeroTH,
                     Language.Haskell.TH.ZeroTH.Helper,
                     Language.Haskell.TH.ZeroTH.Comments,
                     Distribution.ZeroTH
                     Data.Monoid.Record
    Other-modules:   ListUtils
    GHC-options:     -Wall
    Hs-source-dirs:  ppsrc, .

Executable zeroth
    build-depends:   base               >= 4.0    && < 5.0, 
                     directory,
                     process,
                     syb                >= 0.3.6  && < 0.4,
                     transformers       >= 0.3.0  && < 0.4,
                     filepath,
                     cpphs              >= 1.13   && < 1.15,
                     haskell-src-exts   >= 1.13   && < 1.15,
                     transformers       >= 0.2    && < 0.4,
                     template-haskell   >= 2.5    && < 3.0,
                     derive             >= 2.5    && < 2.7,
                     uniplate           >= 1.6    && < 1.7,
                     Cabal              >= 1.12   && < 1.16
    Main-is:         Main.hs
    Other-modules:   Language.Haskell.TH.ZeroTH.Comments,
                     ListUtils,
                     Language.Haskell.TH.ZeroTH.Config,
                     Language.Haskell.TH.ZeroTH.GetOpt,
                     Language.Haskell.TH.ZeroTH,
                     Language.Haskell.TH.ZeroTH.Helper,
                     Distribution.ZeroTH
    GHC-options:     -Wall
    Hs-source-dirs:  ppsrc, .
